// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ログインページ ログインページが正常に描画されました 1`] = `
<DocumentFragment>
  <main
    class="main"
  >
    <div
      class="body"
    >
      <div
        class="title"
      >
        <h1
          class="h1"
        >
          LOGIN
        </h1>
        <p
          class="p"
        >
          ログイン
        </p>
      </div>
      <form
        class="form"
      >
        <div
          class="inputItems"
        >
          <label
            class="label"
            for="email"
          >
            メールアドレス
          </label>
          <br />
          <input
            class="inputParts border border-neutral-500 rounded pl-2.5"
            id="email"
            name="email"
            placeholder="例：bridge@example.com"
            type="email"
          />
          <p
            class="nope"
          >
            ※メールアドレスを入力して下さい
          </p>
        </div>
        <div
          class="inputItems"
        >
          <label
            class="label"
            for="password"
          >
            パスワード
          </label>
          <br />
          <input
            class="inputParts border border-neutral-500 rounded pl-2.5"
            id="password"
            name="password"
            placeholder="例：abcdef123456"
            type="password"
          />
          <p
            class="nope"
          >
            ※パスワードを入力して下さい
          </p>
        </div>
        <div
          class="buttonArea"
        >
          <p
            class="error"
          />
          <button
            class="loginButton"
            type="submit"
          >
            ログイン
            <span
              class="buttonSpan"
            >
              →
            </span>
          </button>
        </div>
      </form>
      <div
        class="title"
      >
        <h2
          class="subTitle"
        >
          はじめてご利用のお客様はこちら
        </h2>
      </div>
      <div
        class="loginLink"
      >
        <a
          href="/userRegister"
        >
          <button
            class="linkButton"
            type="button"
          >
            新規会員登録
            <span
              class="buttonSpan"
            >
              →
            </span>
          </button>
        </a>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ログインページ 正常なメールアドレスとパスワードを入力してログイン 1`] = `
<DocumentFragment>
  <main
    class="main"
  >
    <div
      class="body"
    >
      <div
        class="title"
      >
        <h1
          class="h1"
        >
          LOGIN
        </h1>
        <p
          class="p"
        >
          ログイン
        </p>
      </div>
      <form
        class="form"
      >
        <div
          class="inputItems"
        >
          <label
            class="label"
            for="email"
          >
            メールアドレス
          </label>
          <br />
          <input
            class="inputParts border border-neutral-500 rounded pl-2.5"
            id="email"
            name="email"
            placeholder="例：bridge@example.com"
            type="email"
          />
          <p
            class="nope"
          >
            ※メールアドレスを入力して下さい
          </p>
        </div>
        <div
          class="inputItems"
        >
          <label
            class="label"
            for="password"
          >
            パスワード
          </label>
          <br />
          <input
            class="inputParts border border-neutral-500 rounded pl-2.5"
            id="password"
            name="password"
            placeholder="例：abcdef123456"
            type="password"
          />
          <p
            class="nope"
          >
            ※パスワードを入力して下さい
          </p>
        </div>
        <div
          class="buttonArea"
        >
          <p
            class="error"
          />
          <button
            class="loginButton"
            type="submit"
          >
            ログイン
            <span
              class="buttonSpan"
            >
              →
            </span>
          </button>
        </div>
      </form>
      <div
        class="title"
      >
        <h2
          class="subTitle"
        >
          はじめてご利用のお客様はこちら
        </h2>
      </div>
      <div
        class="loginLink"
      >
        <a
          href="/userRegister"
        >
          <button
            class="linkButton"
            type="button"
          >
            新規会員登録
            <span
              class="buttonSpan"
            >
              →
            </span>
          </button>
        </a>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ログインページ 異常なメールアドレスとパスワードを入力してログイン 1`] = `
<DocumentFragment>
  <main
    class="main"
  >
    <div
      class="body"
    >
      <div
        class="title"
      >
        <h1
          class="h1"
        >
          LOGIN
        </h1>
        <p
          class="p"
        >
          ログイン
        </p>
      </div>
      <form
        class="form"
      >
        <div
          class="inputItems"
        >
          <label
            class="label"
            for="email"
          >
            メールアドレス
          </label>
          <br />
          <input
            class="inputParts border border-neutral-500 rounded pl-2.5"
            id="email"
            name="email"
            placeholder="例：bridge@example.com"
            type="email"
          />
          <p
            class="nope"
          >
            ※メールアドレスを入力して下さい
          </p>
        </div>
        <div
          class="inputItems"
        >
          <label
            class="label"
            for="password"
          >
            パスワード
          </label>
          <br />
          <input
            class="inputParts border border-neutral-500 rounded pl-2.5"
            id="password"
            name="password"
            placeholder="例：abcdef123456"
            type="password"
          />
          <p
            class="nope"
          >
            ※パスワードを入力して下さい
          </p>
        </div>
        <div
          class="buttonArea"
        >
          <p
            class="error"
          >
            メールアドレスかパスワードが間違っています
          </p>
          <button
            class="loginButton"
            type="submit"
          >
            ログイン
            <span
              class="buttonSpan"
            >
              →
            </span>
          </button>
        </div>
      </form>
      <div
        class="title"
      >
        <h2
          class="subTitle"
        >
          はじめてご利用のお客様はこちら
        </h2>
      </div>
      <div
        class="loginLink"
      >
        <a
          href="/userRegister"
        >
          <button
            class="linkButton"
            type="button"
          >
            新規会員登録
            <span
              class="buttonSpan"
            >
              →
            </span>
          </button>
        </a>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
